fix filter active arrow overlap

--- a/css/site.styl
+++ b/css/site.styl
@@ -471,8 +471,7 @@ article
       position: absolute
       left: 115%
       font-size: 3em
-      top: 0
-      bottom: 0
+      bottom: 0.5rem
       line-height: 0.15
 
 // ARCHIVO
